Fixed button z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ body {
     position: absolute;
     width: 100%;
     text-align: center;
+    z-index: 10;
 }
 
 #overlayTitle{
@@ -43,6 +44,7 @@ body {
 }
 
 .tile {
+    z-index: -1;
     width: 10%;
     margin-right: 2.5%;
     display: inline-block;
